--- a/code/html/index.html
+++ b/code/html/index.html
@@ -4,6 +4,26 @@
         <title>Programacion Hipermedial</title>
     </head>
     <body>
-        <h1>Programacion Hipermedial</h1>
+        <form method= "POST" action="/">
+            <fieldset>
+                <legend>Contact</legend>
+
+                <p>
+                    <label>Name:</label>
+                    <input type="text" value="" />
+                </p>
+                <p>
+                    <label>Email:</label>
+                    <input type="text" value="" />
+                </p>
+                <p>
+                    <label>Message:</label>
+                    <textarea></textarea>
+                </p>
+                <p>
+                    <button>Send your message</button>
+                </p>
+            </fieldset>
+        </form>                    
     </body>
 </html>
