--- a/code/html/index.html
+++ b/code/html/index.html
@@ -4,26 +4,6 @@
         <title>Programacion Hipermedial</title>
     </head>
     <body>
-        <form method= "POST" action="/">
-            <fieldset>
-                <legend>Contact</legend>
-
-                <p>
-                    <label>Name:</label>
-                    <input type="text" value="" />
-                </p>
-                <p>
-                    <label>Email:</label>
-                    <input type="text" value="" />
-                </p>
-                <p>
-                    <label>Message:</label>
-                    <textarea></textarea>
-                </p>
-                <p>
-                    <button>Send your message</button>
-                </p>
-            </fieldset>
-        </form>                    
+        <h1>Programacion Hipermedial</h1>           
     </body>
 </html>
