--- a/code/html/examen/index.html
+++ b/code/html/examen/index.html
@@ -13,7 +13,19 @@
 
 <form action="" method="get">
 <p>
-Numero de circulos: <input type="text" name="titulo" maxlength="50" />
+Numero de circulos: <input type="text" name="titulo" maxlength="30" />
+<input type="button" value="Presione Aqui">
+</p>
+
+<p>
+<svg width="200px" height="200px">
+    <circle cx="100" cy="130" r="60" fill="green" stroke="black" stroke-width="1px"/>
+</svg>
+</p>
+<p>
+<svg width="200px" height="200px">
+    <circle cx="100" cy="130" r="60" fill="orange" stroke="black" stroke-width="1px"/>
+</svg>
 </p>
 
         <footer>
@@ -23,4 +35,4 @@ Numero de circulos: <input type="text" name="titulo" maxlength="50" />
 
 </body>
 </html>
-
+</html>
